metadata/force-app/main/default/objects/CustomName_JUaQj__c/CustomName_JUaQj__c.object-meta.xml
<CustomObject>
    <description>Description_LLuYY</description>
    <label>CustomLabel_NOFCp</label>
    <nameField>
        <label>CustomLabel_NOFCp</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_NOFCps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>