metadata/force-app/main/default/objects/CustomName_JUaQj__c/fields/CustomField_lUplC__c.field-meta.xml
<CustomField>
    <fullName>CustomField_lUplC__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldpJNMJ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>