metadata/force-app/main/default/objects/CustomName_JUaQj__c/fields/CustomField_pZqtX__c.field-meta.xml
<CustomField>
    <fullName>CustomField_pZqtX__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldhEYhn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>