metadata/force-app/main/default/objects/CustomName_JUaQj__c/fields/CustomField_updik__c.field-meta.xml
<CustomField>
    <fullName>CustomField_updik__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldBjYcB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>